# Electrical-Potential

./: CMakeLists.txt  LICENSE  README.md
include/: bodies.cuh
kernel/: kernel.cu  kernel.cuh
src/: main.cu
